new firebase set up

--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -81,6 +81,8 @@ $typography: mat-typography-config(
 @import "src/app/layout/components/chat-panel/chat-panel.theme";
 @import "src/app/layout/components/toolbar/toolbar.theme";
 
+@import "src/app/main/auth/login/login.theme";
+
 // Define a mixin for easier access
 @mixin components-theme($theme) {
 
