--- a/src/app/main/connections/post-service/post-service.component.scss
+++ b/src/app/main/connections/post-service/post-service.component.scss
@@ -1,11 +1,11 @@
 @import "src/@fuse/scss/fuse";
 
-    #register {
+    #service {
         width: 100%;
         background: url('/assets/images/backgrounds/dark-material-bg.jpg') no-repeat;
         background-size: cover;
 
-        #register-form-wrapper {
+        #service-form-wrapper {
             flex: 1 0 auto;
             padding: 32px;
 
@@ -13,7 +13,7 @@
                 padding: 16px;
             }
 
-            #register-form {
+            #service-form {
                 width: 384px;
                 max-width: 384px;
                 padding: 32px;
@@ -68,7 +68,7 @@
                     }
                 }
 
-                .register {
+                .service {
                     margin: 32px auto 24px auto;
                     font-weight: 600;
 
