--- a/src/app/main/connections/post-service/post-service.component.html
+++ b/src/app/main/connections/post-service/post-service.component.html
@@ -1,5 +1,5 @@
 
-<div id="service" fxLayout="column">
+<div id="service" fxLayout="row">
 
     <div id="service-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
 
@@ -100,6 +100,12 @@
             </ul>
         </div>
 
+    </div>
+
+    <div>
+        <div *ngFor="let service of services">
+            <pre>{{service}}</pre>
+        </div>
     </div>
 
 </div>
