--- a/src/app/main/user-info/profile/profile.component.html
+++ b/src/app/main/user-info/profile/profile.component.html
@@ -5,7 +5,7 @@
         <div id="service-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
 
             <div class="logo">
-                <img [src]="this.pictURL">
+                <img src="assets/images/logos/fuse.svg">
             </div>
 
             <dynamic-profile [fieldData]="fieldOBJ" >
