--- a/src/app/main/connections/post-service/post-list/post-list.component.scss
+++ b/src/app/main/connections/post-service/post-list/post-list.component.scss
@@ -3,8 +3,8 @@
 #service-list {
   width: 100%;
   background: url("/assets/images/backgrounds/dark-material-bg.jpg") no-repeat;
+  background-color: whitesmoke;
   background-size: cover;
-
   #service-list-form-wrapper {
     flex: 1 0 auto;
     padding: 32px;
