commit to pull from home

--- a/src/app/main/connections/post-service/post-service.component.html
+++ b/src/app/main/connections/post-service/post-service.component.html
@@ -1,4 +1,3 @@
-
 <div id="service" fxLayout="row">
 
     <div id="service-form-wrapper" fxLayout="column" fxLayoutAlign="center center">
@@ -17,9 +16,9 @@
                     <mat-label>Service Type</mat-label>
                     <mat-select formControlName="Title">
                         <mat-option *ngFor="let service of serviceList" [value]="service">
-                          {{service}}
+                            {{service}}
                         </mat-option>
-                      </mat-select>
+                    </mat-select>
                     <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                     <mat-error>
                         Title is required
@@ -29,7 +28,7 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Description</mat-label>
                     <input matInput formControlName="Description">
-                    <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>                    
+                    <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error *ngIf="serviceForm.get('Description').hasError('required')">
                         Description is required
                     </mat-error>
@@ -55,7 +54,7 @@
                         Friends is required
                     </mat-error>
                 </mat-form-field>
-                
+
                 <mat-form-field appearance="outline">
                     <mat-label>Range</mat-label>
                     <input matInput type="Range" formControlName="Range">
@@ -81,13 +80,18 @@
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error *ngIf="serviceForm.get('Zipcode').hasError('required')">
                         Zipcode is required
-                    </mat-error>                 
+                    </mat-error>
                 </mat-form-field>
 
-                <button mat-raised-button color="accent" (click)="onSubmit()" class="submit-button" aria-label="CREATE AN ACCOUNT"
-                [disabled]="serviceForm.invalid">
-                CREATE SERVICE
-            </button>
+                <button mat-raised-button color="accent" (click)="onSubmit()" class="submit-button"
+                    aria-label="create service" [disabled]="serviceForm.invalid">
+                    CREATE SERVICE
+                </button>
+
+                <button mat-raised-button color="red" (click)="delete($event)" class="submit-button"
+                    aria-label="delete service">
+                    DELETE SERVICE
+                </button>
 
 
             </form>
@@ -99,12 +103,9 @@
                 </li>
             </ul>
         </div>
-
-    </div>
-
-    <div>
-        <div *ngFor="let service of services">
-            <pre>{{service}}</pre>
+        <div class="p-32">
+            <button mat-fab color="accent" [routerLink]="['/serviceList']"
+                routerLinkActive="router-link-active">back</button>
         </div>
     </div>
 
