--- a/src/app/main/connections/wall/wall.component.html
+++ b/src/app/main/connections/wall/wall.component.html
@@ -41,8 +41,8 @@
                 </div>
             </div>
         </div>
-        <div fxLayout="row" class="p-32" fxLayoutAlign="end end" fxLayoutAlign.xs="center center">
+        <div fxLayout="row" class="p-32" fxLayoutAlign="end end" fxLayoutAlign.xs="center end">
             <button mat-fab color="accent"[routerLink]="['/service']" 
-            routerLinkActive="router-link-active"  >+</button>
+            routerLinkActive="router-link-active"  >New</button>
         </div>
     </div>
